feat(unpack): 신규 항목(isNew) 테이블 행 붉은색 강조 표시 및 CSS 스타일 적용
새로 추가된 항목(isNew=true)을 시각적으로 명확히 구분할 수 있도록
TableView 행에 PseudoClass 기반 스타일을 적용합니다.

- UnPackingController: tableViewItems 행에 'new-item' PseudoClass 적용 및 isNewProperty 리스너 등록
- app.css: .table-row-cell:new-item 규칙 추가하여 호버(:hover) 및 선택(:selected) 상태에서도 붉은색 글자 유지